--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.0",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
-    "node-telegram-bot-api": "^0.30"
+    "node-telegram-bot-api": "^0.30",
+    "pg": "^7.5.0"
   }
 }
