--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "art-competition-bot",
   "version": "1.0.3",
   "description": "Art Competition Bot",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "switch_to_dev": "export $(cat .env | xargs) && wget --spider https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/setWebhook?url= --delete-after && node index.js"
+    "start": "node dist/index.js",
+    "switch_to_dev": "export $(cat .env | xargs) && wget --spider https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/setWebhook?url= --delete-after && node index.js",
+    "postinstall": "tsc"
   },
   "engines": {
     "node": "8"
@@ -18,6 +19,14 @@
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "node-telegram-bot-api": "^0.30",
-    "pg": "^7.5.0"
+    "pg": "^7.5.0",
+    "typescript": "^3.1.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.11.7",
+    "@types/node-telegram-bot-api": "^0.30.3",
+    "@types/pg": "^7.4.11"
   }
 }
