--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "express": "^4.13.4",
     "node-telegram-bot-api": "^0.30",
     "pg": "^7.5.0",
-    "typescript": "^3.1.3"
-  },
-  "devDependencies": {
+    "typescript": "^3.1.3",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "@types/node": "^10.11.7",
